Added new folders structure

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 	<meta charset="UTF-8">
 	<title>GetFit App | The #1 app fitness & nutrition app</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="icon" type="image/png" href="images/favicon.png" />
+	<link rel="icon" type="image/png" href="assets/img/favicon.png" />
 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<header class="header container hidden">
 		<h1 class="header__logo">
-            <a class="header__logo-link" href="#"><img class="header__logo-image" src="images/getfit-logo.svg" alt="GetFit Logo" /></a>
+            <a class="header__logo-link" href="#"><img class="header__logo-image" src="assets/img/getfit-logo.svg" alt="GetFit Logo" /></a>
         </h1>
 
 		<nav class="header__nav menu">
-			<span class="header__nav-toggle"><img class="header__nav-toggle-img" src="images/menu-icon.png" alt="open menu" /></span>
-			<img class="header__close" src="images/close-icon-white.svg" alt="close dialog" />
+			<span class="header__nav-toggle"><img class="header__nav-toggle-img" src="assets/img/menu-icon.png" alt="open menu" /></span>
+			<img class="header__close" src="assets/img/close-icon-white.svg" alt="close dialog" />
 
 			<ul class="header__list">
 				<li class="header__item"><a href="#" class="header__link">Home</a></li>
@@ -45,7 +45,7 @@
             <section class="features container align-horizontal">
                 <article class="feature hidden">
                     <div class="feature-inner">
-                        <img src="images/features-01.jpg" alt="Resistance" />
+                        <img src="assets/img/features-01.jpg" alt="Resistance" />
 
                         <div class="overlay">
                             <div class="desc">
@@ -58,7 +58,7 @@
                 </article>
                 <article class="feature hidden">
                     <div class="feature-inner">
-                        <img src="images/features-02.jpg" alt="Supplement Plan" />
+                        <img src="assets/img/features-02.jpg" alt="Supplement Plan" />
 
                         <div class="overlay">
                             <div class="desc">
@@ -70,7 +70,7 @@
                 </article>
                 <article class="feature hidden">
                     <div class="feature-inner">
-                        <img src="images/features-03.jpg" alt="Personal Trainers" />
+                        <img src="assets/img/features-03.jpg" alt="Personal Trainers" />
 
                         <div class="overlay">
                             <div class="desc">
@@ -86,7 +86,7 @@
                 <article>
                     <p class="quote__text hidden">“Brute animals are the most healthy, and they are exposed to all weather, and of men, those are healthiest who are the most exposed.”</p>
                     <div class="quote__card hidden">
-                        <img class="quote__image" src="images/quote-author.jpg" alt="John Doe, Los Angeles" />
+                        <img class="quote__image" src="assets/img/quote-author.jpg" alt="John Doe, Los Angeles" />
                         <span class="quote__name">John Doe</span>
                         <span class="quote__location">Los Angeles</span>
                     </div>
@@ -96,8 +96,8 @@
 
         <section class="workouts">
             <span class="workouts__video hidden">
-                <img class="workouts__video-image" src="images/workouts-video.jpg" alt="Workouts video" />
-                <img class="workouts__video-play-button" src="images/workouts-button-play.svg" alt="Play workouts video" />
+                <img class="workouts__video-image" src="assets/img/workouts-video.jpg" alt="Workouts video" />
+                <img class="workouts__video-play-button" src="assets/img/workouts-button-play.svg" alt="Play workouts video" />
             </span>
 
             <article class="workouts__content hidden">
@@ -110,7 +110,7 @@
 
             <div class="workouts__dialog dialog">
                 <div class="workouts__dialog-inner">
-                    <img class="workouts__icon-close close" src="images/close-icon.svg" alt="Close this dialog" />
+                    <img class="workouts__icon-close close" src="assets/img/close-icon.svg" alt="Close this dialog" />
                 </div>
             </div>
         </section>
@@ -121,21 +121,21 @@
                 <div class="playlists__inner align-horizontal">
                     <article class="playlists__item hidden">
                         <div class="playlists__image-box">
-                            <img class="playlists__image" src="images/playlists-01.jpg" alt="Full Body Training" />
+                            <img class="playlists__image" src="assets/img/playlists-01.jpg" alt="Full Body Training" />
                         </div>
                         <h3 class="playlists__title">Full Body Training</h3>
                         <span class="playlists__text">No Equipment</span>
                     </article>
                     <article class="playlists__item hidden">
                         <div class="playlists__image-box">
-                            <img class="playlists__image" src="images/playlists-02.jpg" alt="Back, Arms & Chest" />
+                            <img class="playlists__image" src="assets/img/playlists-02.jpg" alt="Back, Arms & Chest" />
                         </div>
                         <h3 class="playlists__title">Back, Arms & Chest</h3>
                         <span class="playlists__text">Equipment: Weights</span>
                     </article>
                     <article class="playlists__item hidden">
                         <div class="playlists__image-box">
-                            <img class="playlists__image" src="images/playlists-03.jpg" alt="Let’s Train Together" />
+                            <img class="playlists__image" src="assets/img/playlists-03.jpg" alt="Let’s Train Together" />
                         </div>
                         <h3 class="playlists__title">Let’s Train Together</h3>
                         <span class="playlists__text">No Equipment</span>
@@ -178,21 +178,21 @@
 
         <section class="levels align-horizontal">
             <article class="levels__item hidden">
-                <img class="levels__image" src="images/level-beginner-icon.svg" alt="Beginner Level" class="levels__icon" />
+                <img class="levels__image" src="assets/img/level-beginner-icon.svg" alt="Beginner Level" class="levels__icon" />
 
                 <h3 class="levels__title">Beginner</h3>
                 <span class="levels__subtitle">Haven't been to the gym for a while?</span>
                 <p class="levels__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="levels__item hidden">
-                <img class="levels__image" src="images/level-active-icon.svg" alt="Active Level" class="levels__icon" />
+                <img class="levels__image" src="assets/img/level-active-icon.svg" alt="Active Level" class="levels__icon" />
 
                 <h3 class="levels__title">Active</h3>
                 <span class="levels__subtitle">Want to bring your routine up a notch?</span>
                 <p class="levels__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="levels__item hidden">
-                <img class="levels__image" src="images/level-advanced-icon.svg" alt="Advanced Level" class="levels__icon" />
+                <img class="levels__image" src="assets/img/level-advanced-icon.svg" alt="Advanced Level" class="levels__icon" />
 
                 <h3 class="levels__title">Advanced</h3>
                 <span class="levels__subtitle">Need to conquer a new fitness challenge?</span>
@@ -203,28 +203,28 @@
         <section class="testimonials align-horizontal">
             <article class="testimonials__item hidden">
                 <div class="testimonials__image-container">
-                    <img class="testimonials__image testimonials__image--wordpress" src="images/wordpress-logo.svg" alt="WordPress" />
+                    <img class="testimonials__image testimonials__image--wordpress" src="assets/img/wordpress-logo.svg" alt="WordPress" />
                 </div>
 
                 <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="testimonials__item hidden">
                 <div class="testimonials__image-container">
-                    <img class="testimonials__image testimonials__image--mention" src="images/mention-logo.svg" alt="Mention" />
+                    <img class="testimonials__image testimonials__image--mention" src="assets/img/mention-logo.svg" alt="Mention" />
                 </div>
 
                 <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="testimonials__item hidden">
                 <div class="testimonials__image-container">
-                    <img class="testimonials__image testimonials__image--meteor" src="images/meteor-logo.svg" alt="Meteor" />
+                    <img class="testimonials__image testimonials__image--meteor" src="assets/img/meteor-logo.svg" alt="Meteor" />
                 </div>
 
                 <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="testimonials__item hidden">
                 <div class="testimonials__image-container">
-                    <img class="testimonials__image testimonials__image--angular" src="images/angular-logo.svg" alt="Angular" />
+                    <img class="testimonials__image testimonials__image--angular" src="assets/img/angular-logo.svg" alt="Angular" />
                 </div>
 
                 <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
@@ -236,6 +236,6 @@
 		<small class="footer__text">© Copyright 2020. GetFit. All Rights Reserved.</small>
 	</footer>
 
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
