Updated cards animations

--- a/index.html
+++ b/index.html
@@ -35,47 +35,47 @@
                 <h2 class="banner__subtitle">Healthy Habits Made Simple</h2>
                 <h1 class="banner__title">The #1 app fitness & nutrition app</h1>
                 <div class="banner__button-container">
-                    <a href="#" class="banner__button-primary button button__primary"><span class="ero__button-primary-span">Get Started Now</span></a>
-                    <a href="#" class="banner__button-secondary button button-secondary">Learn More</a>
+                    <a href="#" class="banner__button-primary button button__primary"><span class="button__tertiary-span">Get Started Now</span></a>
+                    <a href="#" class="banner__button__secondary button button__secondary">Learn More</a>
                 </div>
             </div>
         </section>
 
-        <section class="features-and-quote">
-            <section class="features container align-horizontal">
-                <article class="feature hidden">
-                    <div class="feature-inner">
-                        <img src="assets/img/features-01.jpg" alt="Resistance" />
+        <section class="features">
+            <section class="features__container container">
+                <article class="features__item hidden">
+                    <div class="features__inner">
+                        <img class="features__image" src="assets/img/features-01.jpg" alt="Resistance" />
 
-                        <div class="overlay">
-                            <div class="desc">
-                                <h3>Resistance</h3>
-                                <span>Push your limits</span>
+                        <div class="features__overlay">
+                            <div class="features__content">
+                                <h3 class="features__title">Resistance</h3>
+                                <span class="features__text">Push your limits</span>
                             </div>
                         </div>
 
                     </div>
                 </article>
-                <article class="feature hidden">
-                    <div class="feature-inner">
-                        <img src="assets/img/features-02.jpg" alt="Supplement Plan" />
+                <article class="features__item hidden">
+                    <div class="features__inner">
+                        <img class="features__image" src="assets/img/features-02.jpg" alt="Supplement Plan" />
 
-                        <div class="overlay">
-                            <div class="desc">
-                                <h3>Supplement Plan</h3>
-                                <span>Look good, feel good</span>
+                        <div class="features__overlay">
+                            <div class="features__content">
+                                <h3 class="features__title">Supplement Plan</h3>
+                                <span class="features__text">Look good, feel good</span>
                             </div>
                         </div>
                     </div>
                 </article>
-                <article class="feature hidden">
-                    <div class="feature-inner">
-                        <img src="assets/img/features-03.jpg" alt="Personal Trainers" />
+                <article class="features__item hidden">
+                    <div class="features__inner">
+                        <img class="features__image" src="assets/img/features-03.jpg" alt="Personal Trainers" />
 
-                        <div class="overlay">
-                            <div class="desc">
-                                <h3>Personal Trainers</h3>
-                                <span>Get fit quickly</span>
+                        <div class="features__overlay">
+                            <div class="features__content">
+                                <h3 class="features__title">Personal Trainers</h3>
+                                <span class="features__text">Get fit quickly</span>
                             </div>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                 <h1 class="workouts__title">The best health & fitness advice online</h1>
                 <p class="workouts__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
 
-                <a class="workouts__link" href="#" class="button button-alt">Get Started Now</a>
+                <a class="button button__tertiary" href="#"><span class="button__tertiary-span">Get Started Now</span></a>
             </article>
 
             <div class="workouts__dialog dialog">
@@ -118,7 +118,7 @@
         <section class="playlists">
             <div class="container">
                 <h2 class="playlists__title-main">Featured Playlists</h2>
-                <div class="playlists__inner align-horizontal">
+                <div class="playlists__inner">
                     <article class="playlists__item hidden">
                         <div class="playlists__image-box">
                             <img class="playlists__image" src="assets/img/playlists-01.jpg" alt="Full Body Training" />
@@ -142,7 +142,7 @@
                     </article>
                 </div>
 
-                <svg viewBox="0 0 420 250" xml:space="preserve">
+                <svg class="playlists__clip-path" viewBox="0 0 420 250" xml:space="preserve">
                     <path class="st0" d="M290,249.3c-66.8-1.2-139.9-3.6-176-5.8c-56.2-3.5-88.1-6.9-104.3-11.1c-10.3-2.6-9.7-1.3-9.7-21.9
                     c0-55.3,4.6-128.3,10.6-167c4.2-27.4,9-41.8,14.3-43.2C28-0.5,131.3,0.7,173.4,2c125,3.9,208.8,10.8,236.7,19.6
                     c4.2,1.3,8.2,3.1,8.9,4c1,1.2,1.2,7.8,0.6,31.2c-2.2,98.3-13.3,174.3-27.6,189.3l-3.7,3.9l-42.4-0.2
@@ -151,7 +151,7 @@
 
 
                 <svg>
-                    <clipPath id="svgPath" clipPathUnits="objectBoundingBox">
+                    <clipPath id="svgClipPath" clipPathUnits="objectBoundingBox">
                         <path d="M0.69 1C0.53 0.99 0.36 0.98 0.27 0.97C.13765 0.96 0.06 0.946 0.023 0.93C-0.0014 0.919 0.00001556 0.92 0.00001556 0.84C0.00001556 0.62 0.010969 0.33 0.025 0.174C0.035 0.064 0.047 0.0066 0.059 0.001032C0.0667 -0.00217 0.31 0.0026 0.41 0.0078C0.71 0.0234 0.91 0.05 0.97657 0.086C0.986576 0.095 0.996 0.0986 1 0.1C1 0.107 1 0.133 1 0.227C0.99 0.62 0.9675 0.92 0.93 0.98L0.92 1L0.82 1C0.768 1 0.71 1 0.69 1Z"></path>
                     </clipPath>
                 </svg>
@@ -162,7 +162,7 @@
             <article class="subscribe__overlay">
                 <div class="subscribe__content hidden">
                     <div class="subscribe__content-inner">
-                        <h2 class="subscribe__subtitle">Tune up your workouts</h2>
+                        <span class="subscribe__subtitle">Tune up your workouts</span>
                         <h1 class="subscribe__title">Subscribe to our weekly giveaways & subscribes</h1>
 
                         <p class="subscribe__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
@@ -176,23 +176,23 @@
             </article>
         </section>
 
-        <section class="levels align-horizontal">
+        <section class="levels">
             <article class="levels__item hidden">
-                <img class="levels__image" src="assets/img/level-beginner-icon.svg" alt="Beginner Level" class="levels__icon" />
+                <img class="levels__icon" src="assets/img/level-beginner-icon.svg" alt="Beginner Level" class="levels__icon" />
 
                 <h3 class="levels__title">Beginner</h3>
                 <span class="levels__subtitle">Haven't been to the gym for a while?</span>
                 <p class="levels__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="levels__item hidden">
-                <img class="levels__image" src="assets/img/level-active-icon.svg" alt="Active Level" class="levels__icon" />
+                <img class="levels__icon" src="assets/img/level-active-icon.svg" alt="Active Level" class="levels__icon" />
 
                 <h3 class="levels__title">Active</h3>
                 <span class="levels__subtitle">Want to bring your routine up a notch?</span>
                 <p class="levels__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="levels__item hidden">
-                <img class="levels__image" src="assets/img/level-advanced-icon.svg" alt="Advanced Level" class="levels__icon" />
+                <img class="levels__icon" src="assets/img/level-advanced-icon.svg" alt="Advanced Level" class="levels__icon" />
 
                 <h3 class="levels__title">Advanced</h3>
                 <span class="levels__subtitle">Need to conquer a new fitness challenge?</span>
@@ -200,34 +200,30 @@
             </article>
         </section>
 
-        <section class="testimonials align-horizontal">
+        <section class="testimonials">
             <article class="testimonials__item hidden">
                 <div class="testimonials__image-container">
                     <img class="testimonials__image testimonials__image--wordpress" src="assets/img/wordpress-logo.svg" alt="WordPress" />
                 </div>
-
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+                <p class="testimonials__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="testimonials__item hidden">
                 <div class="testimonials__image-container">
                     <img class="testimonials__image testimonials__image--mention" src="assets/img/mention-logo.svg" alt="Mention" />
                 </div>
-
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+                <p class="testimonials__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="testimonials__item hidden">
                 <div class="testimonials__image-container">
                     <img class="testimonials__image testimonials__image--meteor" src="assets/img/meteor-logo.svg" alt="Meteor" />
                 </div>
-
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+                <p class="testimonials__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
             <article class="testimonials__item hidden">
                 <div class="testimonials__image-container">
                     <img class="testimonials__image testimonials__image--angular" src="assets/img/angular-logo.svg" alt="Angular" />
                 </div>
-
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+                <p class="testimonials__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
             </article>
         </section>
     </main>
