Fixed bottom cards animations

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<header class="header container hidden">
 		<h1 class="header__logo">
-            <a class="header__logo-link" href="#"><img class="header__logo-image" src="assets/img/getfit-logo.svg" alt="GetFit Logo" /></a>
+            <a class="header__logo-link" href="#"><img class="header__logo-image" src="assets/img/getfit-logo.svg" alt="GetFit" /></a>
         </h1>
 
 		<nav class="header__nav menu">
@@ -32,8 +32,8 @@
     <main>
         <section class="banner">
             <div class="container hidden">
-                <h2 class="banner__subtitle">Healthy Habits Made Simple</h2>
-                <h1 class="banner__title">The #1 app fitness & nutrition app</h1>
+                <span class="banner__subtitle">Healthy Habits Made Simple</span>
+                <h2 class="banner__title">The #1 app fitness & nutrition app</h2>
                 <div class="banner__button-container">
                     <a href="#" class="banner__button-primary button button__primary"><span class="button__tertiary-span">Get Started Now</span></a>
                     <a href="#" class="banner__button__secondary button button__secondary">Learn More</a>
@@ -102,10 +102,10 @@
 
             <article class="workouts__content hidden">
                 <span class="workouts__subtitle">Tune up your workouts</span>
-                <h1 class="workouts__title">The best health & fitness advice online</h1>
+                <h2 class="workouts__title">The best health & fitness advice online</h2>
                 <p class="workouts__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
 
-                <a class="button button__tertiary" href="#"><span class="button__tertiary-span">Get Started Now</span></a>
+                <a class="workouts__button button button__tertiary" href="#"><span class="button__tertiary-span">Get Started Now</span></a>
             </article>
 
             <div class="workouts__dialog dialog">
@@ -163,7 +163,7 @@
                 <div class="subscribe__content hidden">
                     <div class="subscribe__content-inner">
                         <span class="subscribe__subtitle">Tune up your workouts</span>
-                        <h1 class="subscribe__title">Subscribe to our weekly giveaways & subscribes</h1>
+                        <h2 class="subscribe__title">Subscribe to our weekly giveaways & subscribes</h2>
 
                         <p class="subscribe__text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
 
